# habitica-levelup

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: run-ci-checks.sh
src/: AGENTS.md  __init__.py  bot.py  config.py  core.py  infrastructure.py  logging_config.py  tasks.py
src/delivery/: __init__.py  bot_runner.py  cli.py  logging.py  settings.py
src/domain_models/: __init__.py  farm_task.py  party_quest_status.py  resilience.py  settings.py  user_status.py
src/engines/: __init__.py  leveling.py
src/integrations/: __init__.py  habitica_gateway.py  retry.py  retry_policy.py  session.py
src/services/: __init__.py  levelup_service.py  resilience.py
tests/: AGENTS.md  __init__.py  test_architecture.py  test_bot.py  test_config.py  test_core.py  test_engines.py  test_infrastructure.py  test_logging_config.py  test_main.py  test_tasks.py
tests/contracts/: test_habitica_api_contracts.py
tests/integration/: test_bot_integration.py
