[project]
name = "habitica-levelup"
version = "0.1.0"
description = "Auto level up Habitica"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "habiticalib>=0.4.7",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
  "bandit>=1.8.0",
  "mypy>=1.20.0",          # can be changed by: pyrefly, ty
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-plugins>=3.0.1",
  "radon>=6.0.1",
  "ruff>=0.15.9",
  "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=100 -v"
lint = "ruff check ."
format = "ruff format ."
type-check = "mypy src/"
run = "python main.py"
install-hooks = "pre-commit install"
pre-commit = "pre-commit run --all-files"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM117", # Nested test/context managers are acceptable here
    "UP047",  # Keep current generic syntax for Python 3.14 compatibility/readability
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
